# datacamp_financeFundamentalsInPython

./: .gitignore  Upsampling_and_interpolation.ipynb  pyproject.toml
01_time_series/01_with_pandas/: working.py  working_with_pandas.org
01_time_series/02_metrics_and_resampling/: testing.org  time_series.org
01_time_series/data/: nifty50.csv
