[tool.poetry]
name = "datacamp-financefundamentalsinpython"
version = "0.1.0"
description = "Finance fundamentals"
authors = ["Arun Kr. Khattri <arunkhattri@outlook.com>"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "datacamp_financefundamentalsinpython"}]

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
pandas = "^1.5.3"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
scipy = "^1.10.1"
statsmodels = "^0.13.5"
yfinance = "^0.2.14"
ta-lib = "^0.4.25"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pytest = "^7.2.2"
ipython = "^8.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
